Adds simple list box animation

--- a/src/WpfAnimation/WpfAnimation.csproj
+++ b/src/WpfAnimation/WpfAnimation.csproj
@@ -68,6 +68,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
