Adds empty WpfAnimation.Core project

--- a/src/WpfAnimation/WpfAnimation.Demo.csproj
+++ b/src/WpfAnimation/WpfAnimation.Demo.csproj
@@ -127,6 +127,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WpfAnimation.Core\WpfAnimation.Core.csproj">
+      <Project>{09a988cf-b0a4-487c-801c-847305b8354f}</Project>
+      <Name>WpfAnimation.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\lib\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\..\lib\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
