Renames ItemsSourceBehavior to ItemsControlAnimationBehavior

--- a/src/WpfAnimation.Core/WpfAnimation.Core.csproj
+++ b/src/WpfAnimation.Core/WpfAnimation.Core.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Behaviors\ItemsSourceBehavior.cs" />
+    <Compile Include="Behaviors\ItemsControlAnimationBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
