--- a/src/WpfAnimation/WpfAnimation.Demo.csproj
+++ b/src/WpfAnimation/WpfAnimation.Demo.csproj
@@ -133,6 +133,11 @@
       <Name>WpfAnimation.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Avatars\4444522.png" />
+    <Resource Include="Resources\Avatars\618115.jpg" />
+    <Resource Include="Resources\Avatars\github.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\lib\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\..\lib\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
