--- a/lib/repositories.config
+++ b/lib/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\src\WpfAnimation.Demo\packages.config" />
   <repository path="..\src\WpfAnimation\packages.config" />
 </repositories>
